--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -44,7 +44,7 @@
 <!ENTITY Ctr_tabsontop3		"Zavihki niso na vrhu (v2) --- atribut [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 je za nekatere dodatke in samo za celotne teme!">
 <!ENTITY Ctr_tabsontopI1	"Atribut [tabsontop=true/false] je dodan k">
-<!ENTITY Ctr_tabsintitlebar	"Nazivna vrstica &brandShortName;a (nastavitev about:config)">
+<!ENTITY Ctr_tabsintitlebar	"Nazivna vrstica &brandShortName;a (možnost about:config)">
 <!ENTITY Ctr_tabwidthdef	"(privzeto)">
 <!ENTITY Ctr_tabwidthcla	"(klasično)">
 <!ENTITY Ctr_tabminheight	"Višina:">
@@ -56,7 +56,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Vrednosti pod 48 sl. točk bodo v večini premerov povzročile napake!">
 <!ENTITY Ctr_square_edges	"Kvadratasti zgornji koti">
 <!ENTITY Ctr_tttitlebar		"Naziv zavihka v nazivni vrstici &brandShortName;">
-<!ENTITY Ctr_tabinsertion	"Vstavi odprti zavihek poleg trenutnega (nastavitev about:config)">
+<!ENTITY Ctr_tabinsertion	"Vstavi odprti zavihek poleg trenutnega (možnost about:config)">
 <!ENTITY Ctr_emptyfavicon	"Obnovi prazno zaznamko (če je stran ne dobavi)">
 <!ENTITY Ctr_noemptypticon	"Odstrani prazno zaznamko iz pripetih zavihkov">
 <!ENTITY Ctr_e10stab_notd	"Zavihki E10s: odstrani podčrtanje">
@@ -69,7 +69,7 @@
 <!ENTITY Ctr_closetab_hfot	"Skrij ob enem odprtem zavihku">
 <!ENTITY Ctr_closei_def		"Privzete ikone">
 <!ENTITY Ctr_closeonleft	"Nadomestni položaj na zavihku">
-<!ENTITY Ctr_close_wwltab	"Zapri okno z nazadje vidnim zavihkom (nastavitev about:config)">
+<!ENTITY Ctr_close_wwltab	"Zapri okno z nazadje vidnim zavihkom (možnost about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Nekatere različice niso združljive z dodatkom 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Gumb na nazivni vrstici ni združljiv z dodatkom 'Hide Caption Titlebar Plus'.">
@@ -81,8 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Gumb na nazivni vrstici [&brandShortName;a]">
 <!ENTITY Ctr_appbutton2h	"Gumb na nazivni vrstici [&brandShortName;a] (skrit)">
 <!ENTITY Ctr_appbutton2io	"Gumb na nazivni vrstici [&brandShortName;a] (samo ikona)">
-<!ENTITY Ctr_paneluibtweak	"Oranžni gumb ploščastega menija...">
-<!ENTITY Ctr_paneluibtweak2	"...na orodni vrstici zavihkov">
+<!ENTITY Ctr_paneluibtweak	"Oranžni gumb ploščastega menija …">
+<!ENTITY Ctr_paneluibtweak2	"… na orodni vrstici zavihkov">
 <!ENTITY Ctr_appbuttonc_o	"Oranžna barva gumba (privzeto)">
 <!ENTITY Ctr_appbuttonc_a	"Modra barva gumba (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Črna barva gumba (Nightly)">
@@ -102,7 +102,7 @@
 <!ENTITY Ctr_appbautocol	"Samodejno nastavi privzeto / Aurora / Nightly barvo">
 <!ENTITY Ctr_appbutbdl		"Skrij obrobe in barve ozadja">
 <!ENTITY Ctr_dblclclosefx	"Dvojni klik zapre trenutno okno">
-<!ENTITY Ctr_appbclmmenus	"Klikljivi meniji v meniju gumba (Nov zavihek, Natisni ...)">
+<!ENTITY Ctr_appbclmmenus	"Klikljivi meniji v meniju gumba (Nov zavihek, Natisni …)">
 <!ENTITY Ctr_appbutonclab	"Naziv">
 <!ENTITY Ctr_appbutonclab2	"Dodajte naziv ali pustite prazno">
 
@@ -114,7 +114,7 @@
 <!ENTITY Ctr_nbcompact		"Zmanjšaj višino orodne vrstice za krmarjenje">
 <!ENTITY Ctr_hide_bf_popup	"Skrij gumbov pojavni meni zgodovine ob kliku miške">
 <!ENTITY Ctr_bf_space		"Zmanjšaj prostor med gumbi (če je možno)">
-<!ENTITY Ctr_noconicons		"Vsebinski meni strani: nadomesti ikone z oznakami (Nazaj, Naprej ...)">
+<!ENTITY Ctr_noconicons		"Vsebinski meni strani: nadomesti ikone z oznakami (Nazaj, Naprej …)">
 <!ENTITY Ctr_prefpage		"Stran z možnostmi">
 <!ENTITY Ctr_altoptionsd	"Privzeti videz">
 <!ENTITY Ctr_altoptionsp	"Nadomestni videz">
@@ -150,25 +150,25 @@
 <!ENTITY Ctr_nav_txt_ico1	"Prikaži velike ikone">
 <!ENTITY Ctr_nav_txt_ico2	"Prikaži ikone in besedilo">
 <!ENTITY Ctr_nav_txt_ico3	"Prikaži samo besedilo">
-<!ENTITY Ctr_nav_txt_exp	"Classic attributes (experimental):">
+<!ENTITY Ctr_nav_txt_exp	"Klasični atributi (preskusno):">
 <!ENTITY Ctr_iat_notf_vt	"Izključi navpične orodne vrstice">
 <!ENTITY Ctr_cpanelmenus	"Ploščasti meniji: strnjen pogled (zaznamki, zgodovina itd.)">
 <!ENTITY Ctr_hidezoomres	"Nadzorni gumbi za povečavo na orodni vrstici: skrij gumb za ponastavitev povečave">
 <!ENTITY Ctr_alt_newtabp	"Stran novega zavihka (about:newtab): nadomestni videz">
 <!ENTITY Ctr_ctroldsearch	"Staro iskanje">
 <!ENTITY Ctr_ctroldsearchc	"Počisti iskalno polje po iskanju">
-<!ENTITY Ctr_search_oit		"Open search in new tab (about:config preference)">
-<!ENTITY Ctr_osearch_meoit	"Middle-clicks: search in new 'foreground tab'">
-<!ENTITY Ctr_osearch_dm		"Small dropmarker">
+<!ENTITY Ctr_search_oit		"Odpri iskanje v novem zavihku (možnost about:config)">
+<!ENTITY Ctr_osearch_meoit	"Srednji kliki: išči v novem 'zavihku v ospredju'">
+<!ENTITY Ctr_osearch_dm		"Majhna spustna puščica">
 <!ENTITY Ctr_addonmanager	"Upravitelj dodatkov">
 <!ENTITY Ctr_alt_addonsp	"Stran dodatkov 'Več': nadomestni videz">
 <!ENTITY Ctr_alt_addonsm	"Nadomestni videz">
 <!ENTITY Ctr_am_nowarning	"Seznami dodatkov Upravitelja dodatkov: skrij opozorila">
 <!ENTITY Ctr_am_compact		"Seznami dodatkov: strnjen pogled">
 <!ENTITY Ctr_am_compact2	"Strnjen pogled +">
-<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
+<!ENTITY Ctr_am_highlight	"Seznami dodatkov: poudari vnos ob prehodu z miško">
 <!ENTITY Ctr_addonversion	"Stran dodatkov: prikaži različico dodatka">
-<!ENTITY Ctr_xpinstallui	"Staro okno za namestitev dodatkov (nastavitev about:config)">
+<!ENTITY Ctr_xpinstallui	"Staro okno za namestitev dodatkov (možnost about:config)">
 <!ENTITY Ctr_bmbutton		"Gumb menija zaznamkov">
 <!ENTITY Ctr_bmbutpanelm	"Pojavna okna: videz ploščastega menija">
 <!ENTITY Ctr_bmbunsortbm	"Pojavna okna: podmeni 'nerazvrščeni zaznamki'">
@@ -243,7 +243,7 @@
 <!ENTITY Ctr_lbsbsize		"Prilagodljiva širina naslovne in iskalne vrstice">
 <!ENTITY Ctr_searchbar		"Iskalna vrstica">
 <!ENTITY Ctr_lbsugresi		"Prikaži največje možno število predlogov v pojavnem oknu (brez drsnika)">
-<!ENTITY Ctr_lbsugres		"Število rezultatov v pojavnem oknu predlogov (nastavitev about:config)">
+<!ENTITY Ctr_lbsugres		"Število rezultatov v pojavnem oknu predlogov (možnost about:config)">
 
 <!ENTITY Ctr_menubar_items	"Položaj predmetov menija">
 <!ENTITY Ctr_extrabar		"Dodatne orodne vrstice">
@@ -306,10 +306,10 @@
 <!ENTITY Ctr_tabthrobber	"Privzeta slika nalaganja">
 <!ENTITY Ctr_bmanimation	"Animacija dodajanja med zaznamke">
 <!ENTITY Ctr_pananimation	"Animacija odpiranja podokna">
-<!ENTITY Ctr_tabanimation	"Animacija zapiranja/odpiranja zavihkov (nastavitev about:config)">
-<!ENTITY Ctr_dlanimation	"Animacija 'obvestila o prenosih' (nastavitev about:config)">
-<!ENTITY Ctr_fsanimation	"Celozaslonske animacije (nastavitev about:config)">
-<!ENTITY Ctr_fsaduration	"Celozaslonske animacije za vsebino HTML5 (nastavitev about:config)">
+<!ENTITY Ctr_tabanimation	"Animacija zapiranja/odpiranja zavihkov (možnost about:config)">
+<!ENTITY Ctr_dlanimation	"Animacija 'obvestila o prenosih' (možnost about:config)">
+<!ENTITY Ctr_fsanimation	"Celozaslonske animacije (možnost about:config)">
+<!ENTITY Ctr_fsaduration	"Celozaslonske animacije za vsebino HTML5 (možnost about:config)">
 
 <!ENTITY Ctr_toolsitem		"Predmet menija v meniju Orodja">
 <!ENTITY Ctr_appmenuitem	"Predmet menija v meniju programskega gumba">
