--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabcolors_t	"Faneblade farver &amp; tekst">
 
 <!ENTITY Ctr_tabs			"Faneblade">
-<!ENTITY Ctr_tabs0			"Afrundede faneblade (&brandShortName; standard)">
+<!ENTITY Ctr_tabs0			"&brandShortName; standard (Afrundede faneblade)">
 <!ENTITY Ctr_tabs1			"Firkantede faneblade (klassisk)">
 <!ENTITY Ctr_tabs1m			"Firkantede faneblade (australisifiseret)">
 <!ENTITY Ctr_tabs2			"Afrundede faneblade (alternativ)">
