--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -15,7 +15,7 @@
 <!ENTITY Ctr_sidebarbutton	"(Πλευρική στήλη)">
 <!ENTITY Ctr_windowcontrols	"Ελαχιστοποίηση/επαναφορά/κλείσιμο (Πλήρης οθόνη)">
 <!ENTITY Ctr_rr				"Απαιτείται επανεκκίνηση!">
-<!ENTITY Ctr_window			"παράθυρο">
+<!ENTITY Ctr_window			"Παράθυρο">
 
 <!ENTITY Ctr_cuibuttons		"Κουμπιά">
 <!ENTITY Ctr_cuibutnormal	"Κανονικά">
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabcolors_t	"Χρώματα καρτελών &amp; κειμένου">
 
 <!ENTITY Ctr_tabs			"Καρτέλες">
-<!ENTITY Ctr_tabs0			"Καμπυλόγραμμες καρτέλες (προεπιλογή &brandShortName;)">
+<!ENTITY Ctr_tabs0			"Προεπιλογή &brandShortName; (Καμπυλόγραμμες καρτέλες)">
 <!ENTITY Ctr_tabs1			"Τετραγωνισμένες καρτέλες (κλασική τεχνοτροπία)">
 <!ENTITY Ctr_tabs1m		  	"Τετραγωνισμένες καρτέλες (τεχνοτροπία Australis)">
 <!ENTITY Ctr_tabs2			"Καμπυλόγραμμες καρτέλες (εναλλακτική τεχνοτροπία)">
