--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabcolors_t	"Texto y colores de pestaña">
 
 <!ENTITY Ctr_tabs			"Pestañas">
-<!ENTITY Ctr_tabs0			"Pestañas curvadas (predeterminado de &brandShortName;)">
+<!ENTITY Ctr_tabs0			"Predeterminado de &brandShortName; (Pestañas curvadas)">
 <!ENTITY Ctr_tabs1			"Pestañas cuadradas (clásico)">
 <!ENTITY Ctr_tabs1m			"Pestañas cuadradas (australizado)">
 <!ENTITY Ctr_tabs2			"Pestañas curvadas (alternativo)">
