--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabcolors_t	"Kaartide värvid &amp; tekst">
 
 <!ENTITY Ctr_tabs			"Kaardid">
-<!ENTITY Ctr_tabs0			"Ümarad kaardid (&brandShortName;i vaikimisi säte)">
+<!ENTITY Ctr_tabs0			"&brandShortName;i vaikimisi säte (Ümarad kaardid)">
 <!ENTITY Ctr_tabs1			"Kandilised kaardid (klassikaline)">
 <!ENTITY Ctr_tabs1m			"Kandilised kaardid (Australis'e stiilis)">
 <!ENTITY Ctr_tabs2			"Ümarad kaardid (alternatiivne)">
