--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabcolors_t	"Rajtarkowe barby a tekst">
 
 <!ENTITY Ctr_tabs			"Rajtarki">
-<!ENTITY Ctr_tabs0			"Skulojćene rajtarki (standard za Australis)">
+<!ENTITY Ctr_tabs0			"Standard za Australis (Skulojćene rajtarki)">
 <!ENTITY Ctr_tabs1			"Róžkate rajtarki (klasiski)">
 <!ENTITY Ctr_tabs1m			"Róžkate rajtarki (na Australis přiměrjeny)">
 <!ENTITY Ctr_tabs2			"Skulojćene rajtarki (alternatiwny)">
