--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabcolors_t	"Colori e testo schede">
 
 <!ENTITY Ctr_tabs			"Schede">
-<!ENTITY Ctr_tabs0			"Schede con angoli arrotondati (predefinito in &brandShortName;)">
+<!ENTITY Ctr_tabs0			"Predefinito in &brandShortName; (Schede con angoli arrotondati)">
 <!ENTITY Ctr_tabs1			"Schede con angoli spigolosi (stile classico)">
 <!ENTITY Ctr_tabs1m			"Schede con angoli spigolosi (effetto Australis)">
 <!ENTITY Ctr_tabs2			"Scheda con angoli arrotondati (stile alternativo)">
