--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabcolors_t	"Настройки цветов">
 
 <!ENTITY Ctr_tabs			"Вкладки">
-<!ENTITY Ctr_tabs0			"Изогнутые (по умолчанию в &brandShortName;)">
+<!ENTITY Ctr_tabs0			"По умолчанию в &brandShortName; (Изогнутые)">
 <!ENTITY Ctr_tabs1			"Квадратные (классические)">
 <!ENTITY Ctr_tabs1m			"Квадратные (аустрализированные)">
 <!ENTITY Ctr_tabs2			"Изогнутые (другие)">
