--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabcolors_t	"Özel Renkler">
 
 <!ENTITY Ctr_tabs			"Sekmeler">
-<!ENTITY Ctr_tabs0			"Kavisli Sekmeler (&brandShortName; varsayılanı)">
+<!ENTITY Ctr_tabs0			"&brandShortName; varsayılanı (Kavisli Sekmeler)">
 <!ENTITY Ctr_tabs1			"Köşeli Sekmeler (Klasik)">
 <!ENTITY Ctr_tabs1m			"Kareli Sekmeler (Australize)">
 <!ENTITY Ctr_tabs2			"Kavisli Sekmeler (Alternatif)">
