--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabcolors_t	"Налаштування кольору">
 
 <!ENTITY Ctr_tabs			"Вкладки">
-<!ENTITY Ctr_tabs0			"Вигнуті вкладки (типово в Australis)">
+<!ENTITY Ctr_tabs0			"Типово в Australis (Вигнуті вкладки)">
 <!ENTITY Ctr_tabs1			"Квадратні вкладки (класичні)">
 <!ENTITY Ctr_tabs1m			"Квадратні вкладки (австралізовані)">
 <!ENTITY Ctr_tabs2			"Вигнуті вкладки (альтернативні)">
