--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabcolors_t	"色彩">
 
 <!ENTITY Ctr_tabs			"分頁">
-<!ENTITY Ctr_tabs0			"弧形分頁 (Australis 預設值)">
+<!ENTITY Ctr_tabs0			"Australis 預設值 (弧形分頁)">
 <!ENTITY Ctr_tabs1			"矩形分頁 (經典傳統)">
 <!ENTITY Ctr_tabs1m			"矩形分頁 (仿 Australis 風格)">
 <!ENTITY Ctr_tabs2			"弧形分頁 (非傳統風格)">
