--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -31,7 +31,7 @@
 <!ENTITY Ctr_tabcolors_t	"Cores Personalizadas">
 
 <!ENTITY Ctr_tabs			"Abas">
-<!ENTITY Ctr_tabs0			"Abas Arredondadas (Padrão Australis)">
+<!ENTITY Ctr_tabs0			"Padrão Australis (Abas Arredondadas)">
 <!ENTITY Ctr_tabs1			"Abas 'Quadradas' (Clássicas)">
 <!ENTITY Ctr_tabs1m			"Abas 'Quadradas' (Australizadas)">
 <!ENTITY Ctr_tabs2			"Abas Arredondadas (Alternativas)">
