--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -150,23 +150,23 @@
 <!ENTITY Ctr_nav_txt_ico1	"Εμφάνιση μεγάλων εικονιδίων">
 <!ENTITY Ctr_nav_txt_ico2	"Εμφάνιση εικονιδίων και κειμένου">
 <!ENTITY Ctr_nav_txt_ico3	"Εμφάνιση μόνο κειμένου">
-<!ENTITY Ctr_nav_txt_exp	"Classic attributes (experimental):">
+<!ENTITY Ctr_nav_txt_exp	"Κλασικά χαρακτηριστικά (πειραματικό):">
 <!ENTITY Ctr_iat_notf_vt	"Εξαιρούνται κατακόρυφες εργαλειοθήκες">
 <!ENTITY Ctr_cpanelmenus	"Αναδυόμενα μενού πίνακα (σελιδοδείκτες, ιστορικό κλπ): συνεπτυγμένη προβολή">
 <!ENTITY Ctr_hidezoomres	"Στοιχεία ελέγχου μεγέθυνσης σε εργαλειοθήκη: απόκρυψη κουμπιού επεναφοράς επιπέδου μεγέθυνσης">
 <!ENTITY Ctr_alt_newtabp	"Σελίδα νέας καρτέλας (about:newtab): εναλλακτική εμφάνιση">
 <!ENTITY Ctr_ctroldsearch	"Παλιότερη διεπαφή αναζήτησης">
 <!ENTITY Ctr_ctroldsearchc	"Κένωση πλαισίου αναζήτησης μετά την αναζήτηση">
-<!ENTITY Ctr_search_oit		"Open search in new tab (about:config preference)">
-<!ENTITY Ctr_osearch_meoit	"Middle-clicks: search in new 'foreground tab'">
-<!ENTITY Ctr_osearch_dm		"Small dropmarker">
+<!ENTITY Ctr_search_oit		"Άνοιγμα αναζήτησης σε νέα καρτέλα (προτίμηση «about:config»)">
+<!ENTITY Ctr_osearch_meoit	"Μεσαίο κλικ: search in new 'foreground tab'">
+<!ENTITY Ctr_osearch_dm		"Μικρός δείκτης ανάπτυξης">
 <!ENTITY Ctr_addonmanager	"Διαχειριστής πρόσθετων">
 <!ENTITY Ctr_alt_addonsp	"Σελίδα «Περισσότερα»: εναλλακτική σειρά περιεχομένου">
 <!ENTITY Ctr_alt_addonsm	"Εναλλακτική εμφάνιση">
 <!ENTITY Ctr_am_nowarning	"Λίστες πρόσθετων: απόκρυψη προειδοποιήσεων">
 <!ENTITY Ctr_am_compact		"Λίστες πρόσθετων: συμπαγής προβολή">
 <!ENTITY Ctr_am_compact2	"Συμπαγής προβολή +">
-<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
+<!ENTITY Ctr_am_highlight	"Λίστες πρόσθετων: επισήμανση καταχώρισης κατά την κατάδειξη">
 <!ENTITY Ctr_addonversion	"Λίστες πρόσθετων: εμφάνιση έκδοσης πρόσθετου">
 <!ENTITY Ctr_xpinstallui	"Παλιό παράθυρο εγκατάστασης πρόσθετων (προτίμηση «about:config»)">
 <!ENTITY Ctr_bmbutton		"Κουμπί μενού σελιδοδεικτών">
