--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -57,7 +57,9 @@
 <!ENTITY Ctr_square_edges	"Kandilised ülemised nurgad">
 <!ENTITY Ctr_tttitlebar		"Kaardi pealkiri &brandShortName;i tiitliribal">
 <!ENTITY Ctr_tabinsertion	"Pane seotud kaardid praeguse järele (about:config eelistus)">
-<!ENTITY Ctr_emptyfavicon	"Taasta tühi lehe ikoon (kui sait seda ei paku)">
+<!ENTITY Ctr_emptytfavico	"Show favicon (if a site does not offer one)">
+<!ENTITY Ctr_emptytfavico_n	"None">
+<!ENTITY Ctr_emptytfavico_g	"Generic">
 <!ENTITY Ctr_noemptypticon	"Eemalda püsikaartidelt tühjad lehe ikoonid">
 <!ENTITY Ctr_e10stab_notd	"E10s kaardid: eemalda allajoonimine">
 <!ENTITY Ctr_closetab_0		"Kaardi sulgemise nupp">
@@ -127,7 +129,7 @@
 <!ENTITY Ctr_wincontrols	"Liigutatavad akna juhtelemendid täisekraani režiimis">
 <!ENTITY Ctr_oldtoplevimg	"'Tippdomeeni' pildid: klassikaline välimus">
 <!ENTITY Ctr_altalertbox	"'Teavituskast': alternatiivne välimus">
-<!ENTITY Ctr_emptyfavicon2	"Asenda üldine (tühi ja punktiiriga) lehe ikoon lehe kujutisega">
+<!ENTITY Ctr_emptygfavico	"Replace generic favicon">
 <!ENTITY Ctr_mstatusbar		"Liigutatav olekupaneel">
 <!ENTITY Ctr_mstatusbars4e	"Olekuriba paneeli kontrollib 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Olekuriba paneeli kontrollib 'ThePuzzlePiece'">
@@ -172,6 +174,7 @@
 <!ENTITY Ctr_bmbutton		"Järjehoidjate menüü nupp">
 <!ENTITY Ctr_bmbutpanelm	"Menüühüpik: paneelimenüü välimus">
 <!ENTITY Ctr_bmbunsortbm	"Menüühüpik: alammenüü 'Sortimata järjehoidjad'">
+<!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
 <!ENTITY Ctr_bmbviewbmtb	"Menüühüpik: näita kirjet 'Kuva järjehoidjariba'">
 <!ENTITY Ctr_bmbnounsort	"Menüühüpik: peida kirje 'sortimata järjehoidjad'">
 <!ENTITY Ctr_bmbutnotext	"Peida järjehoidjate ribal sildid">
@@ -222,9 +225,11 @@
 <!ENTITY Ctr_starinurlinfo	"Järjehoidjate menüü vaikimisi nupp peidetakse">
 <!ENTITY Ctr_feedinurl		"RSS-voo nupp">
 <!ENTITY Ctr_hideurelstop	"Peida 'peata &amp; laadi uuesti' nupud">
+<!ENTITY Ctr_hideurelstop2	"Always show 'go' button">
 <!ENTITY Ctr_hideurlgo		"Peida 'mine' nupp">
 <!ENTITY Ctr_hideurlsrg		"Peida nuppude 'laadi uuesti, peata &amp; mine' eraldajad &amp; vahed">
 <!ENTITY Ctr_urlbardropm	"Liiguta rippmenüü avamise nupp võimalikult lõppu">
+<!ENTITY Ctr_urlbardropm2	"Make dropmarker always visible">
 <!ENTITY Ctr_altreaderico	"Alternatiivsed 'Lugemisvaate' ikoonid">
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
 <!ENTITY Ctr_locsearchbw10	"Vähenda aadressiriba ja otsinguriba kõrgust (katsejärgus)">
