--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -57,7 +57,9 @@
 <!ENTITY Ctr_square_edges	"Angoli superiori spigolosi">
 <!ENTITY Ctr_tttitlebar		"Titolo scheda nella barra del titolo di &brandShortName;">
 <!ENTITY Ctr_tabinsertion	"Inserisci la scheda relativa dopo la scheda corrente (about:config)">
-<!ENTITY Ctr_emptyfavicon	"Nei siti che non hanno una favicon usa la vecchia favicon vuota">
+<!ENTITY Ctr_emptytfavico	"Show favicon (if a site does not offer one)">
+<!ENTITY Ctr_emptytfavico_n	"None">
+<!ENTITY Ctr_emptytfavico_g	"Generic">
 <!ENTITY Ctr_noemptypticon	"Rimuovi la favicon vuota dalle schede bloccate">
 <!ENTITY Ctr_e10stab_notd	"Schede E10s: rimuovi la sottolineatura">
 <!ENTITY Ctr_closetab_0		"Pulsante di chiusura schede">
@@ -127,7 +129,7 @@
 <!ENTITY Ctr_wincontrols	"Angoli finestra mobili in modalità schermo intero">
 <!ENTITY Ctr_oldtoplevimg	"Immagini domini di livello superiore: aspetto classico">
 <!ENTITY Ctr_altalertbox	"Finestra di avviso: aspetto alternativo">
-<!ENTITY Ctr_emptyfavicon2	"Sostituisci la favicon generica predefinita con un’icona a forma di foglio">
+<!ENTITY Ctr_emptygfavico	"Replace generic favicon">
 <!ENTITY Ctr_mstatusbar		"Barra di stato mobile">
 <!ENTITY Ctr_mstatusbars4e	"La barra di stato è gestita da 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"La barra di stato è gestita da 'ThePuzzlePiece'">
@@ -172,6 +174,7 @@
 <!ENTITY Ctr_bmbutton		"Menu del pulsante segnalibri">
 <!ENTITY Ctr_bmbutpanelm	"Popup: aspetto del menu a pannello">
 <!ENTITY Ctr_bmbunsortbm	"Popup: sottomenu 'Segnalibri non catalogati'">
+<!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
 <!ENTITY Ctr_bmbviewbmtb	"Popup: mostra 'Visualizza barra degli strumenti'">
 <!ENTITY Ctr_bmbnounsort	"Popup: nascondi 'Segnalibri non catalogati'">
 <!ENTITY Ctr_bmbutnotext	"Nascondi etichetta della barra dei segnalibri">
@@ -222,9 +225,11 @@
 <!ENTITY Ctr_starinurlinfo	"Il pulsante segnalibri viene nascosto">
 <!ENTITY Ctr_feedinurl		"Pulsante dei feed nella barra degli indirizzi">
 <!ENTITY Ctr_hideurelstop	"Nascondi i pulsanti Stop e Ricarica nella barra degli indirizzi">
+<!ENTITY Ctr_hideurelstop2	"Always show 'go' button">
 <!ENTITY Ctr_hideurlgo		"Nascondi il pulsante 'Vai'">
 <!ENTITY Ctr_hideurlsrg		"Nascondi spazio e separatori dai pulsanti Stop, Ricarica e Vai">
 <!ENTITY Ctr_urlbardropm	"Vai all’ultima posizione del menu cronologia">
+<!ENTITY Ctr_urlbardropm2	"Make dropmarker always visible">
 <!ENTITY Ctr_altreaderico	"Icone alternative per la modalità lettura">
 <!ENTITY Ctr_hideprbutton	"Nascondi l’icona di notifica quando un popup viene bloccato">
 <!ENTITY Ctr_locsearchbw10	"Riduci l'altezza delle barre degli indirizzi e di ricerca (sperimentale)">
