--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -168,7 +168,7 @@
 <!ENTITY Ctr_am_nowarning	"Seznam Správce rozšíření: skrývat varování">
 <!ENTITY Ctr_am_compact		"Správce doplňků: kompaktní vzhled">
 <!ENTITY Ctr_am_compact2	"Kompaktní vzhled +">
-<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
+<!ENTITY Ctr_am_highlight	"Správce rozšíření: zvýraznit položku po najetí myší">
 <!ENTITY Ctr_addonversion	"Seznam Správce rozšíření: zobrazit verzi rozšíření">
 <!ENTITY Ctr_xpinstallui	"Správce rozšíření: starý vzhled (předvolba about:config)">
 <!ENTITY Ctr_bmbutton		"Tlačítko menu záložek">
